
  * Added `csq_result_as_string` option to `pythoncode` question types,
    allowing the result to come back as a string (useful for custom types as
    return values from `pythoncode` or `pythonic` question types, where
    evaluation would otherwise fail).

  * Added `logread`, `logwrite`, and `logedit` commands for working with log
    entries in a human-readable format.

CHANGED:

  * Plugins should now be stored in `cs_data_root/plugins` rather than in
    `cs_fs_root/__PLUGINS__`.  URLs starting with _plugin now point to the
    proper location.

  * File locks are now stored with a `.lock` extension, to avoid potential
    collisions with directory names.

  * Changed the name of the `util` module to `user` to better reflect its
    purpose.

  * CAT-SOOP will use date-based versioning moving forward.  Planned regular
    releases are 20XX.9 and 20XX.2 (September and February, corresponding with
    the start of the fall and spring terms at MIT, respectively).  Each release
    will also now have a codename.

  * Upgraded KaTeX to v0.10.2.

  * Reverted changes to `language` module from 14.0.0.

  * Changed the solution display for the `richtext` question type.

  * `util.read_user_file` now does not raise an exception if there is an error
    in a user's file.  Rather, it always returns a dictionary, but includes
    error information in the case of an error.

  * Logs are now stored in a binary format in order to improve the efficiency
    of reading/writing log entries.

DEPRECATED:

REMOVED:

  * Removed several deprecated features:

      * `__MEDIA__` can no longer be used as a name for directories containing
        static files.  `__STATIC__` should be used instead.

      * `csm_tools` no longer points to utility functions from third-party
        libraries.  Use `csm_thirdparty` instead.

      * `cs_print` has been removed.  Use `print` instead.

      * `csq_multiplechoice_renderer` and `csq_multiplechoice_soln_mode`